@@ -854,6 +854,8 @@ int JackFreebobDriver::Read()
     int wait_status = 0;
     fDelayedUsecs = 0.f;
 
+retry:
+
     jack_nframes_t nframes = freebob_driver_wait (driver, -1, &wait_status,
                              &fDelayedUsecs);
 
@@ -868,7 +870,7 @@ int JackFreebobDriver::Read()
          */
         jack_log("FreeBoB XRun");
         NotifyXRun(fBeginDateUst, fDelayedUsecs);
-        return -1;
+        goto retry; /* recoverable error*/
     }
 
     if (nframes != fEngineControl->fBufferSize)
